--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A CLI music player using youtube as a source",
   "main": "app.js",
   "dependencies": {
+    "chalk": "^1.1.0",
+    "cli": "^0.9.0",
     "colors": "^0.6.2",
+    "readline-sync": "^1.2.19",
     "underscore": "^1.6.0",
     "youtube-dl": "^1.10.5",
     "youtube-search": "^1.0.2"
@@ -14,8 +17,8 @@
     "start": "node app.js"
   },
   "bin": {
-    "ytm": "app.js",
-    "yplayer": "app.js"
+    "ytm": "node app.js",
+    "yplayer": "node app.js"
   },
   "repository": {
     "type": "git",
