--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yplayer",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A CLI music player using youtube as a source",
   "main": "app.js",
   "dependencies": {
@@ -9,8 +9,8 @@
     "colors": "^0.6.2",
     "readline-sync": "^1.2.19",
     "underscore": "^1.6.0",
-    "youtube-dl": "^1.10.5",
-    "youtube-search": "^1.0.2"
+    "youtube-search": "^1.0.2",
+    "ytdl-core": "^0.6.0"
   },
   "devDependencies": {},
   "scripts": {
